# RSSR

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/workflows/: release.yml
docs/: index.html
docs/readme/: webui
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: index.ts
frontend/src/components/ArticlePanel/: ArticlePanel.css  ArticlePanel.tsx
frontend/src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx
frontend/src/components/MasonryGrid/: MasonryGrid.css  MasonryGrid.tsx
frontend/src/components/MediaPanel/: MediaPanel.css  MediaPanel.tsx  MediaPreview.css  MediaPreview.tsx
frontend/src/components/Modal/: AddFeedModal.tsx  AddGroupModal.tsx  Modal.css
frontend/src/components/Reader/: Reader.css  Reader.tsx
frontend/src/components/Setting/: Settings.css  Settings.tsx
frontend/src/components/Sidebar/: Sidebar.css  Sidebar.tsx
frontend/src/components/Toast/: Toast.css  Toast.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useAppState.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  en_US.json  zh.json  zh_CN.json
frontend/src/styles/: global.css
frontend/src/types/: index.ts
src/: cli.rs  feed.rs  main.rs  models.rs  storage.rs  web.rs
src/config/: default.rs  mod.rs
src/utils/: mod.rs  time.rs
