[package]
name = "rssr"
version = "0.1.0"
edition = "2021"

[build-dependencies]
which = "8"

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive"] }
# RSS/Atom parsing
rss = "^2.0"
atom_syndication = "^0.12"
reqwest = { version = "^0.13", features = ["blocking"] }
# Web server
axum = "^0.8"
tokio = { version = "^1.50", features = ["full"] }
tower = "^0.5"
tower-http = { version = "^0.6", features = ["fs", "cors"] }
# Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
# Storage
sqlx = { version = "^0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "^0.4", features = ["serde"] }
# Error handling
anyhow = "^1.0.102"
thiserror = "^2"
regex = "^1"
toml = "^1"